# Pingus-World-Tour

./: .gitmodules  CMakeLists.txt  README.md
res/assets/: checkbox.aseprite  concept-stuck.aseprite  driller.aseprite  exit sign woord wip.aseprite  exit_icon.aseprite  fast_forward_icon.aseprite  fortress.aseprite  helicopter.aseprite  honey_coint.aseprite  level_selector_mockup.aseprite  pause_exit_reset_fastfoward_icons.aseprite  pillars.aseprite  pingu.aseprite  pingu_blowing_up.aseprite  pingu_facing_forward_template.aseprite  pingu_hitbox.aseprite  pingus_result_screen.aseprite  qr_icon.aseprite  restart_icon.aseprite  sign fancy.aseprite  stairs.aseprite  target_icon.aseprite  tiles.aseprite  title_screen.aseprite  walking animation-Sheet.aseprite  walking animation.aseprite
save_data/: save.json  test_writing.json
src/: anim_honey_coin.cpp  anim_honey_coin.h  anim_penguin_bomber.cpp  anim_penguin_bomber.h  anim_penguin_driller.cpp  anim_penguin_driller.h  anim_penguin_walk.cpp  anim_penguin_walk.h  anim_target.cpp  anim_target.h  custom_type_registry.cpp  custom_type_registry.h  honey_coin.cpp  honey_coin.h  item_menu.cpp  item_menu.h  items.cpp  items.h  json_loading_test.cpp  json_loading_test.h  level_object_layer.h  level_select.cpp  level_select.h  main.cpp  penguin.cpp  penguin.h  pingus_camera.cpp  pingus_camera.h  pingus_exit.h  pingus_level.cpp  pingus_level.h  pingus_type_registry.h  pingus_world_tour.cpp  pingus_world_tour.h  play_level.cpp  play_level.h  player_interface.h  result_screen.cpp  result_screen.h  spawner.cpp  (+5 more)
(+9 files in other folders)
